@@ -75,6 +75,12 @@ xymon (4.4.0-alpha1) unstable; urgency=low
      matching that regex are silently discarded.
    * Multiple targeted and excluded networks can be specified for xymonnet and
      xymongrep using XYMONNETWORKS and XYMONEXNETWORKS variables in xymonserver.cfg
+    * The xymonclient.cfg file now references /etc/{default,sysconfig}/xymon-client
+      files (if present) to allow for defaults (such as client destination) to 
+      be modified there.
+    * The xymonserver.cfg file now presupposes that it's running in a xymoncmd-    
+      or xymonlaunch-configured context, and that variables like $MACHINEDOTS are
+      already set.
    
    * FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
      write) to xymonnet
